Tweak - fix style of footer box - margins now align with head and main

--- a/theme/gallery.css
+++ b/theme/gallery.css
@@ -102,18 +102,15 @@ div#main  {
 	}
 
 div#footer  {
-	padding-top: 7px;
 	padding-left: 4px;
-	padding-right: 10px;
+	padding-top: 7px;
 	padding-bottom: 5px;
-	margin-right: 10px;
 	clear: both;
 	font-size: 70%;
 	}
 
 /* footr_box = line around the footer contents, using jquery ui's box */
 #footer_box  {
-	width: 100%;
 	}
 
 /* unordered list used for 'this image' tag information */
